--- a/CloudService/ThemeParkCloud/WCFServiceWebRole1/WCFServiceWebRole1.csproj
+++ b/CloudService/ThemeParkCloud/WCFServiceWebRole1/WCFServiceWebRole1.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Data.Edm, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Data.Edm.5.2.0\lib\net40\Microsoft.Data.Edm.dll</HintPath>
@@ -58,7 +61,10 @@
     <Reference Include="Microsoft.WindowsAzure.Storage, Version=2.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAzure.Storage.2.1.0.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
     </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.Services.Client" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Spatial, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Spatial.5.2.0\lib\net40\System.Spatial.dll</HintPath>
     </Reference>
@@ -90,6 +96,24 @@
     </Compile>
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThemePark.cs">
+      <DependentUpon>ThemeParkData.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ThemeParkData.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ThemeParkData.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ThemeParkData.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ThemeParkData.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ThemeParkData.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ThemeParkData.edmx</DependentUpon>
+    </Compile>
     <Compile Include="WebRole.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -100,12 +124,32 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
+    <EntityDeploy Include="ThemeParkData.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ThemeParkData.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="ThemeParkData.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ThemeParkData.edmx</DependentUpon>
+      <LastGenOutput>ThemeParkData.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="ThemeParkData.edmx.diagram">
+      <DependentUpon>ThemeParkData.edmx</DependentUpon>
+    </Content>
+    <Content Include="ThemeParkData.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ThemeParkData.edmx</DependentUpon>
+      <LastGenOutput>ThemeParkData.cs</LastGenOutput>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
