--- a/CloudService/ThemeParkCloud/WCFServiceWebRole1/Web.config
+++ b/CloudService/ThemeParkCloud/WCFServiceWebRole1/Web.config
@@ -1,5 +1,9 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <!--  To collect diagnostic traces, uncomment the section below or merge with existing system.diagnostics section.
         To persist the traces to storage, update the DiagnosticsConnectionString setting with your storage credentials.
         To avoid performance degradation, remember to disable tracing on production deployments.
@@ -23,36 +27,48 @@
   <system.diagnostics>
     <trace>
       <listeners>
-        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-          name="AzureDiagnostics">
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
           <filter type="" />
         </add>
       </listeners>
     </trace>
   </system.diagnostics>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
   </system.web>
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior>
           <!-- To avoid disclosing metadata information, set the value below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true"/>
+          <serviceMetadata httpGetEnabled="true" />
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
     <!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
     -->
-    <directoryBrowse enabled="true"/>
+    <directoryBrowse enabled="true" />
   </system.webServer>
-
+  <connectionStrings>
+    <add name="ThemeParkData_Entities" connectionString="metadata=res://*/ThemeParkData.csdl|res://*/ThemeParkData.ssdl|res://*/ThemeParkData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ehwtdpidc8.database.windows.net;initial catalog=ThemeParkData;persist security info=True;user id=ThemePark;password=Molly.10;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v12.0" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
