Added Cloud Connection

--- a/CloudService/ThemeParkCloud/WCFServiceWebRole1/Web.config
+++ b/CloudService/ThemeParkCloud/WCFServiceWebRole1/Web.config
@@ -63,6 +63,7 @@
   </system.webServer>
   <connectionStrings>
     <add name="ThemeParkData_Entities" connectionString="metadata=res://*/ThemeParkData.csdl|res://*/ThemeParkData.ssdl|res://*/ThemeParkData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ehwtdpidc8.database.windows.net;initial catalog=ThemeParkData;persist security info=True;user id=ThemePark;password=Molly.10;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="Data Source=ehwtdpidc8.database.windows.net;Initial Catalog=sad_Rest_service;user=ThemePark;password=Molly.10" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
