--- a/WindowsPhoneApp/ThemeParkData/ThemeParkData/ThemeParkData.csproj
+++ b/WindowsPhoneApp/ThemeParkData/ThemeParkData/ThemeParkData.csproj
@@ -93,6 +93,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="HelperClasses.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
