Adding Photo's to blob - Still WIP

--- a/WindowsPhoneApp/ThemeParkData/ThemeParkData/ThemeParkData.csproj
+++ b/WindowsPhoneApp/ThemeParkData/ThemeParkData/ThemeParkData.csproj
@@ -115,6 +115,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="TakePhoto.xaml.cs">
+      <DependentUpon>TakePhoto.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ThemeParks.xaml.cs">
       <DependentUpon>ThemeParks.xaml</DependentUpon>
     </Compile>
@@ -133,6 +136,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="photos.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TakePhoto.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
