--- a/CloudService/ThemeParkPhotos/WCFServiceWebRole1/WCFServiceWebRole1.csproj
+++ b/CloudService/ThemeParkPhotos/WCFServiceWebRole1/WCFServiceWebRole1.csproj
@@ -99,7 +99,9 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
